# simpcomp

./: .gitattributes  .gitignore  .gitmodules  .release  AUTHORS  Bibliography.md  CHANGELOG  COPYING  Changelog.md  DownloadAndInstallation.md  HowToCiteSimpcomp.md  Makefile  Makefile.am  Makefile.in  PackageInfo.g  ProjectHome.md  README  README.md  Roadmap.md  TalksAndConferences.md  autogen.sh  chap0.html  chap1.html  chap10.html  chap11.html  chap12.html  chap13.html  chap14.html  chap15.html  chap16.html  chap17.html  chap18.html  chap2.html  chap3.html  chap4.html  chap5.html  chap6.html  chap7.html  chap8.html  chap9.html  (+11 more)
_data/: package.yml
complexes/: complexes.idxb
doc/: biblio.bib  chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap10.html  chap10.txt  chap10_mj.html  chap11.html  chap11.txt  chap11_mj.html  chap12.html  chap12.txt  chap12_mj.html  chap13.html  chap13.txt  chap13_mj.html  chap14.html  chap14.txt  chap14_mj.html  chap15.html  chap15.txt  chap15_mj.html  chap16.html  chap16.txt  chap16_mj.html  chap17.html  chap17.txt  chap17_mj.html  chap18.html  chap18.txt  chap18_mj.html  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chap3.html  chap3.txt  chap3_mj.html  (+49 more)
lib/: DMT.gd  DMT.gi  bistellar.gd  bistellar.gi  blowups.gd  blowups.gi  class3mflds.gd  class3mflds.gi  complex.gd  complex.gi  fromgroup.gd  fromgroup.gi  generate.gd  generate.gi  glprops.gd  glprops.gi  highlySymmetricSurfaces.gd  highlySymmetricSurfaces.gi  homology.gd  homology.gi  io.gd  io.gi  isosig.gd  isosig.gi  labelops.gd  labelops.gi  lib.gd  lib.gi  (+19 more)
(+7761 files in other folders)
