AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

bindir = bin/
bin_PROGRAMS = bistellar

bistellar_SOURCES = src/bistellar_move.cpp src/bistellar_move.h \
					src/face.cpp src/face.h src/main.cpp \
					src/movable_complex.cpp src/movable_complex.h \
					src/randomize_complex.cpp src/randomize_complex.h \
					src/reduce_complex.cpp src/reduce_complex.h \
					src/types.cpp src/types.h src/util.cpp src/util.h
